# chess-backend

./: .gitignore  CMakeLists.txt  LICENSE  README.md
comm/common/: CommonNamedPipe.h  INamedPipe.cpp  INamedPipe.h
comm/linux/: NamedPipeLinuxImpl.cpp  NamedPipeLinuxImpl.h
comm/windows/: NamedPipeWindowsImpl.cpp  NamedPipeWindowsImpl.h
src/: ConsoleChessboardApplication.cpp  ConsoleChessboardApplication.h  main.cpp
src/chess/: Board.cpp  Board.h  Player.cpp  Player.h
src/chess/piece/: Bishop.cpp  Bishop.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h
src/chess/util/: MoveResult.cpp  MoveResult.h  Point.cpp  Point.h  Utils.cpp  Utils.h
src/comm/: NamedPipeLinuxImpl.cpp  NamedPipeLinuxImpl.h
